--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ services:
     image: telegraf:alpine
     container_name: telegraf
     restart: unless-stopped
-    hostname: telegraf 
+    hostname: telegraf
     env_file:
       - .env
     volumes:
-      - /:/hostfs:ro 
+      - /:/hostfs:ro
       - ./telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
     networks:
       - skynet
@@ -25,7 +25,7 @@ services:
       - ${INFLUXDB_PORT}:8086
     networks:
       - skynet
-  
+
   grafana:
     image: grafana/grafana-oss:latest
     container_name: grafana
@@ -47,7 +47,7 @@ services:
     restart: unless-stopped
     hostname: portainer
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock 
+      - /var/run/docker.sock:/var/run/docker.sock
       - portainer-data:/data
     ports:
       - 8000:8000
@@ -65,7 +65,8 @@ services:
       - .env
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    
+    command: --interval 3600
+
 volumes:
   influxdb-data:
   grafana-data:
