feat: enhances flexibility, reliability, and maintainability of the monitoring stack, integrate Loki and Alloy services, update Prometheus and InfluxDB configurations
    - Added Loki and Alloy services to the Docker setup for enhanced monitoring.
    - Updated `.env.example` and `docker-compose.yaml` for improved security and configuration.
    - Corrected and cleaned up Prometheus and InfluxDB datasource configurations in `docker-compose.yaml`.
    - Removed obsolete Grafana provisioning files and updated settings for better Loki integration.
    - Updated `README` and `CHANGELOG.md` to reflect changes related to Loki and configuration adjustments.
    - Set InfluxDB datasource as non-editable for security.

--- a/configs/telegraf.conf
+++ b/configs/telegraf.conf
@@ -1,5 +1,5 @@
 [agent]
-  interval = "10s"
+  interval = "5s"
 
 [global_tags]
   user = "${DOCKER_INFLUXDB_INIT_USERNAME}"
@@ -25,9 +25,19 @@
 
 [[inputs.system]]
 
+[[inputs.tail]]
+  files = ["/var/log/**.log"]
+  from_beginning = true
+
+[[inputs.processes]]
+
 [[outputs.influxdb_v2]]	
   urls = ["http://$INFLUXDB_HOST:$INFLUXDB_PORT"]
   token = "$DOCKER_INFLUXDB_INIT_ADMIN_TOKEN"
   organization = "$DOCKER_INFLUXDB_INIT_ORG"
   bucket = "$DOCKER_INFLUXDB_INIT_BUCKET"
   insecure_skip_verify = true
+
+[[outputs.prometheus_client]]
+  listen = ":9273"
+  metric_version = 2
