--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,3 @@
-# Shoutrrr
-SHOUTRRR_DISCORD="discord://token@webhookid"
-SHOUTRRR_SLACK="slack://hook:T00000000-B00000000-XXXXXXXXXXXXXXXXXXXXXXXX@webhook"
-
-# Watchtower
-WATCHTOWER_CLEANUP=false
-WATCHTOWER_REMOVE_VOLUMES=false
-WATCHTOWER_MONITOR_ONLY=true
-WATCHTOWER_NOTIFICATION_URL="$SHOUTRRR_DISCORD $SHOUTRRR_SLACK"
-
 # InfluxDB
 INFLUXDB_HOST=influxdb
 INFLUXDB_PORT=8086
@@ -18,3 +8,28 @@ DOCKER_INFLUXDB_INIT_ORG=
 DOCKER_INFLUXDB_INIT_BUCKET=telegraf
 DOCKER_INFLUXDB_INIT_RETENTION=4d
 DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=
+
+# Prometheus
+PROMETHEUS_HOST=prometheus
+PROMETHEUS_PORT=9090
+
+# Loki
+LOKI_HOST=loki
+LOKI_PORT=3100
+
+# Grafana
+GRAFANA_PORT=3000
+GF_SECURITY_ADMIN_USER=
+GF_SECURITY_ADMIN_PASSWORD=
+GF_FEATURE_TOGGLES_ENABLE=alertingSimplifiedRouting,alertingQueryAndExpressionsStepMode
+
+# Homarr
+SECRET_ENCRYPTION_KEY=
+
+# Watchtower
+WATCHTOWER_NOTIFICATION_URL=
+WATCHTOWER_CLEANUP=true
+WATCHTOWER_REMOVE_VOLUMES=true
+WATCHTOWER_INCLUDE_STOPPED=true
+WATCHTOWER_NO_STARTUP_MESSAGE=false
+WATCHTOWER_SCHEDULE="0 0 3 * * *"
