--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -25,6 +25,15 @@
 
 [[inputs.system]]
 
+[[inputs.tail]]
+  files = ["/var/log/**.log"]
+  from_beginning = true
+
+[[inputs.wireguard]]
+
+[[inputs.docker]]
+  endpoint = "unix:///var/run/docker.sock"
+
 [[outputs.influxdb_v2]]	
   urls = ["http://$INFLUXDB_HOST:$INFLUXDB_PORT"]
   token = "$DOCKER_INFLUXDB_INIT_ADMIN_TOKEN"
