--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -29,6 +29,8 @@
   files = ["/var/log/**.log"]
   from_beginning = true
 
+[[inputs.processes]]
+
 [[outputs.influxdb_v2]]	
   urls = ["http://$INFLUXDB_HOST:$INFLUXDB_PORT"]
   token = "$DOCKER_INFLUXDB_INIT_ADMIN_TOKEN"
