add initial support for Homarr and Portainer services with Docker Compose files, update example environment variables, and create changelog and license files

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ DOCKER_INFLUXDB_INIT_ORG=
 DOCKER_INFLUXDB_INIT_BUCKET=telegraf
 DOCKER_INFLUXDB_INIT_RETENTION=4d
 DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=
+
+# Homarr
+SECRET_ENCRYPTION_KEY=
