refactor .gitignore to remove unnecessary comments and ensure proper formatting

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-.env                     // Ignore .env files
-homarr/appdata/*         // Ignore all files in homarr/appdata directory
-!homarr/appdata/.gitkeep // Except for homarr/appdata/.gitkeep
-grafana/backups/*        // Ignore all files in grafana/backups directory
-!grafana/backups/.gitkeep // Except for grafana/backups/.gitkeep
+.env
+homarr/appdata/*
+!homarr/appdata/.gitkeep
+grafana/backups/*
+!grafana/backups/.gitkeep
