--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,6 +38,8 @@ services:
       - telegraf
     volumes:
       - grafana-data:/var/lib/grafana
+      - ./grafana/dashboards:/var/lib/grafana/dashboards
+      - ./grafana/provisioning:/etc/grafana/provisioning
     ports:
       - 3000:3000
     networks:
@@ -49,3 +51,4 @@ volumes:
 
 networks:
   skynet:
+    driver: bridge
