add watchtower configuration to .env.example

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,11 @@ DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=
 
 # Homarr
 SECRET_ENCRYPTION_KEY=
+
+# Watchtower
+WATCHTOWER_NOTIFICATION_URL=
+WATCHTOWER_CLEANUP=true
+WATCHTOWER_REMOVE_VOLUMES=true
+WATCHTOWER_INCLUDE_STOPPED=true
+WATCHTOWER_NO_STARTUP_MESSAGE=false
+WATCHTOWER_SCHEDULE="0 0 3 * * *"
