--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -37,3 +37,7 @@
   organization = "$DOCKER_INFLUXDB_INIT_ORG"
   bucket = "$DOCKER_INFLUXDB_INIT_BUCKET"
   insecure_skip_verify = true
+
+[[outputs.prometheus_client]]
+  listen = ":9273"
+  metric_version = 2
