--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,7 @@ WATCHTOWER_REMOVE_VOLUMES=true
 WATCHTOWER_INCLUDE_STOPPED=true
 WATCHTOWER_NO_STARTUP_MESSAGE=false
 WATCHTOWER_SCHEDULE="0 0 3 * * *"
+
+# Grafana
+GRAFANA_DATASOURCE_INFLUXDB_NAME=InfluxDB
+GRAFANA_MAIN_FOLDER_NAME=Production
