--- a/grafana/templates/provisioning/dashboards/production.template.yaml
+++ b/grafana/templates/provisioning/dashboards/production.template.yaml
@@ -2,7 +2,7 @@ apiVersion: 1
 
 providers:
   - name: System-Dashboards
-    folder: 'Production'
+    folder: ${GRAFANA_MAIN_FOLDER_NAME}
     type: file
     disableDeletion: false
     editable: true
