--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   telegraf:
     image: telegraf:alpine
-    container_name: host.telegraf
+    container_name: telegraf
     restart: unless-stopped
     hostname: telegraf
     env_file:
@@ -14,7 +14,7 @@ services:
 
   prometheus:
     image: prom/prometheus:latest
-    container_name: host.prometheus
+    container_name: prometheus
     restart: unless-stopped
     hostname: prometheus
     depends_on:
@@ -29,7 +29,7 @@ services:
 
   influxdb:
     image: influxdb:alpine
-    container_name: host.influxdb
+    container_name: influxdb
     restart: unless-stopped
     hostname: influxdb
     depends_on:
@@ -44,8 +44,10 @@ services:
       - skynet
 
   grafana:
-    image: grafana/grafana-oss:latest
-    container_name: host.grafana
+    build:
+      context: ./grafana
+      dockerfile: Dockerfile
+    container_name: grafana
     restart: unless-stopped
     hostname: grafana
     depends_on:
@@ -53,14 +55,10 @@ services:
       - telegraf
     volumes:
       - grafana-data:/var/lib/grafana
-      - ./grafana/dashboards:/var/lib/grafana/dashboards
-      - ./grafana/provisioning:/etc/grafana/provisioning
-      - ./grafana/startup.sh:/startup.sh:ro
     ports:
       - 3000:3000
     networks:
       - skynet
-    command: ["/bin/sh", "/startup.sh"]
 
 volumes:
   influxdb-data:
