update Dockerfile: add ARGs for InfluxDB configuration to enhance flexibility

--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -1,5 +1,13 @@
 FROM alpine:latest AS builder
 
+ARG GRAFANA_DATASOURCE_INFLUXDB_NAME
+ARG GRAFANA_MAIN_FOLDER_NAME
+ARG INFLUXDB_HOST
+ARG INFLUXDB_PORT
+ARG DOCKER_INFLUXDB_INIT_ORG
+ARG DOCKER_INFLUXDB_INIT_BUCKET
+ARG DOCKER_INFLUXDB_INIT_ADMIN_TOKEN
+
 RUN apk update && apk add --no-cache curl gettext && rm -rf /var/cache/apk/*
 
 WORKDIR /workspace
