update docker-compose and production.yaml.template: set container name for Grafana and adjust dashboard path configuration

--- a/grafana/provisioning/dashboards/production.yaml.template
+++ b/grafana/provisioning/dashboards/production.yaml.template
@@ -9,5 +9,5 @@ providers:
     allowUiUpdates: true        
     updateIntervalSeconds: 10
     options:
-      path: /var/lib/grafana/dashboards/system
-      foldersFromFilesStructure: true
+      path: /var/lib/grafana/dashboards
+      foldersFromFilesStructure: false
