update Grafana configuration: add Prometheus datasource and adjust related environment variables

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,10 @@ DOCKER_INFLUXDB_INIT_BUCKET=telegraf
 DOCKER_INFLUXDB_INIT_RETENTION=4d
 DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=
 
+# Prometheus
+PROMETHEUS_HOST=prometheus
+PROMETHEUS_PORT=9090
+
 # Homarr
 SECRET_ENCRYPTION_KEY=
 
@@ -19,7 +23,3 @@ WATCHTOWER_REMOVE_VOLUMES=true
 WATCHTOWER_INCLUDE_STOPPED=true
 WATCHTOWER_NO_STARTUP_MESSAGE=false
 WATCHTOWER_SCHEDULE="0 0 3 * * *"
-
-# Grafana
-GRAFANA_DATASOURCE_INFLUXDB_NAME=InfluxDB
-GRAFANA_MAIN_FOLDER_NAME=Production
