--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
       - ./prometheus:/etc/prometheus
       - prometheus-data:/prometheus
     ports:
-      - 9090:9090
+      - ${PROMETHEUS_PORT}:9090
     networks:
       - skynet
 
@@ -49,10 +49,10 @@ services:
       context: ./grafana
       dockerfile: Dockerfile
       args:
-        GRAFANA_DATASOURCE_INFLUXDB_NAME: ${GRAFANA_DATASOURCE_INFLUXDB_NAME}
-        GRAFANA_MAIN_FOLDER_NAME: ${GRAFANA_MAIN_FOLDER_NAME}
         INFLUXDB_HOST: ${INFLUXDB_HOST}
         INFLUXDB_PORT: ${INFLUXDB_PORT}
+        PROMETHEUS_HOST: ${PROMETHEUS_HOST}
+        PROMETHEUS_PORT: ${PROMETHEUS_PORT}
         DOCKER_INFLUXDB_INIT_ORG: ${DOCKER_INFLUXDB_INIT_ORG}
         DOCKER_INFLUXDB_INIT_BUCKET: ${DOCKER_INFLUXDB_INIT_BUCKET}
         DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: ${DOCKER_INFLUXDB_INIT_ADMIN_TOKEN}
@@ -61,6 +61,7 @@ services:
     depends_on:
       - influxdb
       - telegraf
+      - prometheus
     volumes:
       - grafana-data:/var/lib/grafana
     ports:
