--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -1,7 +1,8 @@
 FROM alpine:latest AS builder
 
-ARG GRAFANA_DATASOURCE_INFLUXDB_NAME
 ARG GRAFANA_MAIN_FOLDER_NAME
+ARG INFLUXDB_HOST
+ARG INFLUXDB_PORT
 ARG INFLUXDB_HOST
 ARG INFLUXDB_PORT
 ARG DOCKER_INFLUXDB_INIT_ORG
