update Dockerfile: add Prometheus host and port arguments

--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -1,10 +1,9 @@
 FROM alpine:latest AS builder
 
-ARG GRAFANA_MAIN_FOLDER_NAME
 ARG INFLUXDB_HOST
 ARG INFLUXDB_PORT
-ARG INFLUXDB_HOST
-ARG INFLUXDB_PORT
+ARG PROMETHEUS_HOST
+ARG PROMETHEUS_PORT
 ARG DOCKER_INFLUXDB_INIT_ORG
 ARG DOCKER_INFLUXDB_INIT_BUCKET
 ARG DOCKER_INFLUXDB_INIT_ADMIN_TOKEN
