--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,11 @@ DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=
 PROMETHEUS_HOST=prometheus
 PROMETHEUS_PORT=9090
 
+# Grafana
+GRAFANA_PORT=3000
+GF_SECURITY_ADMIN_USER=admin
+GF_SECURITY_ADMIN_PASSWORD=admin
+
 # Homarr
 SECRET_ENCRYPTION_KEY=
 
