--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -8,19 +8,17 @@ ARG DOCKER_INFLUXDB_INIT_ORG
 ARG DOCKER_INFLUXDB_INIT_BUCKET
 ARG DOCKER_INFLUXDB_INIT_ADMIN_TOKEN
 
-RUN apk update && apk add --no-cache curl gettext && rm -rf /var/cache/apk/*
+RUN apk update \
+    && apk add --no-cache curl gettext \
+    && rm -rf /var/cache/apk/*
 
-WORKDIR /workspace
+WORKDIR /provisioning
 
-COPY ./provisioning /workspace/provisioning
-COPY ./dashboards /workspace/dashboards
-COPY ./scripts /workspace/scripts
+COPY ./provisioning /provisioning
 
-RUN chmod +x /workspace/scripts/*.sh
-
-RUN /workspace/scripts/build-provisioning.sh
+RUN chmod +x /provisioning/generate-provisioning.sh \
+    && /provisioning/generate-provisioning.sh
 
 FROM grafana/grafana-oss:latest
 
-COPY --from=builder /workspace/provisioning /etc/grafana/provisioning/
-COPY --from=builder /workspace/dashboards /var/lib/grafana/dashboards/
+COPY --from=builder /provisioning/datasources /etc/grafana/provisioning/datasources
