Feature/settings improvements (#4)
Summary of Changes 🚀
	•	Grafana: Added default provisioning, refactored scripts, improved environment variable handling, and updated dashboards.
	•	Prometheus & InfluxDB: Added Prometheus service, improved monitoring configs, and fixed InfluxDB datasource URL.
	•	Docker & Scripts: Enhanced start/stop scripts, added maintenance utilities, and improved error handling.
	•	Configuration & Fixes: Updated environment variables, fixed provisioning paths, and improved documentation.

Enhances flexibility, reliability, and maintainability of the monitoring stack. ✅

--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,22 @@ DOCKER_INFLUXDB_INIT_BUCKET=telegraf
 DOCKER_INFLUXDB_INIT_RETENTION=4d
 DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=
 
+# Prometheus
+PROMETHEUS_HOST=prometheus
+PROMETHEUS_PORT=9090
+
+# Grafana
+GRAFANA_PORT=3000
+GF_SECURITY_ADMIN_USER=admin
+GF_SECURITY_ADMIN_PASSWORD=admin
+
 # Homarr
 SECRET_ENCRYPTION_KEY=
+
+# Watchtower
+WATCHTOWER_NOTIFICATION_URL=
+WATCHTOWER_CLEANUP=true
+WATCHTOWER_REMOVE_VOLUMES=true
+WATCHTOWER_INCLUDE_STOPPED=true
+WATCHTOWER_NO_STARTUP_MESSAGE=false
+WATCHTOWER_SCHEDULE="0 0 3 * * *"
