feature: add Loki and Alloy services to Docker setup

--- a/.env.example
+++ b/.env.example
@@ -13,10 +13,15 @@ DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=
 PROMETHEUS_HOST=prometheus
 PROMETHEUS_PORT=9090
 
+# Loki
+LOKI_HOST=loki
+LOKI_PORT=3100
+
 # Grafana
 GRAFANA_PORT=3000
 GF_SECURITY_ADMIN_USER=admin
 GF_SECURITY_ADMIN_PASSWORD=admin
+GF_FEATURE_TOGGLES_ENABLE=alertingSimplifiedRouting,alertingQueryAndExpressionsStepMode
 
 # Homarr
 SECRET_ENCRYPTION_KEY=
