--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -4,6 +4,8 @@ ARG INFLUXDB_HOST
 ARG INFLUXDB_PORT
 ARG PROMETHEUS_HOST
 ARG PROMETHEUS_PORT
+ARG LOKI_HOST
+ARG LOKI_PORT
 ARG DOCKER_INFLUXDB_INIT_ORG
 ARG DOCKER_INFLUXDB_INIT_BUCKET
 ARG DOCKER_INFLUXDB_INIT_ADMIN_TOKEN
