--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,21 +43,99 @@ services:
     networks:
       - skynet
 
+  loki:
+    image: grafana/loki:latest
+    container_name: loki
+    restart: unless-stopped
+    hostname: loki
+    ports:
+      - "${LOKI_PORT:-3100}:3100"
+    command: -config.file=/etc/loki/local-config.yaml
+    networks:
+      - skynet
+
+  alloy:
+    image: grafana/alloy:latest
+    container_name: alloy
+    restart: unless-stopped
+    hostname: alloy
+    env_file:
+      - .env
+    volumes:
+      - ./alloy/config.alloy:/etc/alloy/config.alloy
+    ports:
+      - ${ALLOY_PORT:-12345}:12345
+    command: > 
+      run --server.http.listen-addr=0.0.0.0:${ALLOY_PORT:-12345}
+      --storage.path=/var/lib/alloy/data
+      /etc/alloy/config.alloy
+    networks:
+      - skynet
+
   grafana:
+    image: grafana/grafana-oss:latest
     container_name: grafana
-    build:
-      context: ./grafana
-      dockerfile: Dockerfile
-      args:
-        INFLUXDB_HOST: ${INFLUXDB_HOST:-influxdb}
-        INFLUXDB_PORT: ${INFLUXDB_PORT:-8086}
-        PROMETHEUS_HOST: ${PROMETHEUS_HOST:-prometheus}
-        PROMETHEUS_PORT: ${PROMETHEUS_PORT:-9090}
-        DOCKER_INFLUXDB_INIT_ORG: ${DOCKER_INFLUXDB_INIT_ORG}
-        DOCKER_INFLUXDB_INIT_BUCKET: ${DOCKER_INFLUXDB_INIT_BUCKET}
-        DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: ${DOCKER_INFLUXDB_INIT_ADMIN_TOKEN}
     restart: unless-stopped
     hostname: grafana
+    entrypoint: 
+      - sh
+      - -euc
+      - |
+        mkdir -p /etc/grafana/provisioning/datasources
+        cat <<EOF > /etc/grafana/provisioning/datasources/influxdb.yaml
+        apiVersion: 1
+        deleteDatasources:
+          - name: InfluxDB
+            orgId: 1
+        datasources:
+          - name: InfluxDB
+            type: influxdb
+            access: proxy
+            url: http://${INFLUXDB_HOST}:${INFLUXDB_PORT}
+            isDefault: true
+            jsonData:
+              version: Flux
+              organization: ${DOCKER_INFLUXDB_INIT_ORG}
+              defaultBucket: ${DOCKER_INFLUXDB_INIT_BUCKET}
+              httpMode: POST
+            secureJsonData:
+              token: ${DOCKER_INFLUXDB_INIT_ADMIN_TOKEN}
+            editable: true
+            version: 1
+        EOF
+        cat <<EOF > /etc/grafana/provisioning/datasources/loki.yaml
+        apiVersion: 1
+        deleteDatasources:
+          - name: Loki
+            orgId: 1
+        datasources:
+          - name: Loki
+            type: loki
+            access: proxy
+            orgId: 1
+            url: http://${LOKI_HOST}:${LOKI_PORT}
+            basicAuth: false
+            isDefault: true
+            version: 1
+            editable: false
+        EOF
+        cat <<EOF > /etc/grafana/provisioning/datasources/prometheus.yaml
+        apiVersion: 1
+        deleteDatasources:
+          - name: Prometheus
+            orgId: 1
+        datasources:
+          - name: Loki
+            type: loki
+            access: proxy
+            orgId: 1
+            url: http://${LOKI_HOST}:${LOKI_PORT}
+            basicAuth: false
+            isDefault: true
+            version: 1
+            editable: false
+        EOF
+        /run.sh
     depends_on:
       - influxdb
       - telegraf
