chore: update .env.example and docker-compose.yaml for security and configuration adjustments

--- a/.env.example
+++ b/.env.example
@@ -19,8 +19,8 @@ LOKI_PORT=3100
 
 # Grafana
 GRAFANA_PORT=3000
-GF_SECURITY_ADMIN_USER=admin
-GF_SECURITY_ADMIN_PASSWORD=admin
+GF_SECURITY_ADMIN_USER=
+GF_SECURITY_ADMIN_PASSWORD=
 GF_FEATURE_TOGGLES_ENABLE=alertingSimplifiedRouting,alertingQueryAndExpressionsStepMode
 
 # Homarr
